# SO101-LeRobot-VLA

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  new-setup.md  pyproject.toml
docker/: 99-feetech.rules  Dockerfile  Dockerfile.gr00t  Dockerfile.lerobot  Dockerfile.smolvla  Dockerfile.teleop  docker-compose.yaml  lerobot-entrypoint.sh  lerobot_keyboard_stdin.pth  lerobot_keyboard_stdin.py  server-entrypoint.sh  teleop-entrypoint.sh
docker/sample_calibrations/: konan_robot.json  konan_teleop.json
docs/: TROUBLESHOOTING.md
